--- a/2020-covid19.html
+++ b/2020-covid19.html
@@ -78,21 +78,64 @@
 
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <div class="details">
-                            <h6>Em virtude da pandemia global de Corona Vírus e visando atender as medidas de prevenção à
-                                propagação do Covid-19, a organização do SciencePub decidiu pela suspensão das próximas
-                                edições do evento nas cidades onde o evento acontece.
-                                <br><br>
-                                A edição de Imperatriz, no Maranhão, que aconteceria no dia 21 de março, será realizada em uma data posterior,
-                                a ser divulgada.
-                                <br><br>
+                        <div class="details text-justify">
+                            <p>
+                                Em virtude da pandemia global de Corona Vírus e visando atender as medidas de prevenção
+                                à propagação do Covid-19, a organização do SciencePub decidiu pela suspensão das
+                                próximas edições do evento nas cidades onde o evento acontece.
+                            </p>
+                            <p>
+                                A edição de Imperatriz, no Maranhão, que aconteceria no dia 21 de março, será realizada
+                                em uma data posterior, a ser divulgada.
+                            </p>
+                            <p>
                                 Estamos acompanhando a situação e novas datas serão divulgadas posteriormente.<br>
-                                Ajude a evitar a proliferação do vírus seguindo recomendações de fontes confiáveis, 
-                                como o <a href="https://saude.gov.br/">Ministério da Saúde</a> e canais de divulgadores científicos como o do <a href="https://www.youtube.com/channel/UCSTlOTcyUmzvhQi6F8lFi5w">Atila Iamarino</a>.
-                            </h6>
+                                Ajude a evitar a proliferação do vírus seguindo recomendações de fontes confiáveis,
+                                como o <a href="https://saude.gov.br/">Ministério da Saúde</a> e canais de divulgadores
+                                científicos como o do <a
+                                    href="https://www.youtube.com/channel/UCSTlOTcyUmzvhQi6F8lFi5w">Atila Iamarino</a>.
+                            </p>
                         </div>
                         <div>
                             <h5>18/03/2020</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="section-header">
+                            <h2>Atualização sobre as edições presenciais e a pandemia de Corona Vírus</h2>
+                        </div>
+                        <div class="details text-justify">
+                            <p>
+                                Em virtude da pandemia global de Corona Vírus e visando atender as medidas de prevenção
+                                à propagação do Covid-19, a organização do SciencePub mantém a suspensão das
+                                próximas edições do evento nas cidades onde o evento acontece.
+                            </p>
+                            <p>
+                                A edição de Imperatriz, no Maranhão, que aconteceria no dia 21 de março, foi cancelada e
+                                será remarcada em data futura, a definir.
+                            </p>
+                            <p>
+                                Continuamos a acompanhar a situação e novas datas serão divulgadas posteriormente.<br>
+                                Por enquanto os nossos encontros continuaram a acontecer através de lives no Instagram e
+                                no YouTube. Você também pode ter um happy hour científico acompanhando nosso <a
+                                    href="https://open.spotify.com/show/4FZ6hNlDhcDjA4V5uJ8UnH?si=04UfPSb5Sam8Kv2sw46yag">podcast</a>.
+                            </p>
+                            <p>
+                                Continue a seguir recomendações de fontes confiáveis, como o <a
+                                    href="https://saude.gov.br/">Ministério da Saúde</a> e canais de divulgadores
+                                científicos como o do <a
+                                    href="https://www.youtube.com/channel/UCSTlOTcyUmzvhQi6F8lFi5w">Atila Iamarino</a>.
+                                E se puder, fique em casa.
+                            </p>
+                            <p>
+                                Atenciosamente,<br>
+                                Organização do SciencePub
+                            </p>
+                        </div>
+                        <div>
+                            <h5>03/07/2020</h5>
                         </div>
                     </div>
                 </div>
