Atualiza data sobre notificacao da Covid-19

--- a/2020-covid19.html
+++ b/2020-covid19.html
@@ -73,7 +73,8 @@
         <section id="speakers-details" class="wow fadeIn">
             <div class="container">
                 <div class="section-header">
-                    <h2>Atualização sobre a pandemia de Corona Vírus</h2>
+                    <h2>Atualização sobre a pandemia de Corona Vírus</h2><br>
+                    <p>21 de Março de 2020</p>
                 </div>
 
                 <div class="row">
